Feature #97916 : Đăng ký tài khoản & Security Config (Form Login)
https://edu-redmine.sun-asterisk.vn/issues/97916